# nPhys

./: .gitmodules  CMakeLists.txt  build.sh  notes.txt
src/: CMakeLists.txt  Collisions.cc  Collisions.hpp  Constants.hpp  EOMs.cc  EOMs.hpp  Engine.cc  Engine.hpp  Frames.cc  Frames.hpp  Window.cc  Window.hpp  object_types.hpp
src/bindings/: Bindings.cc
src/models/: model_types.hpp  shape_types.hpp
tests/: test.py  test_live_animation.py
